service.yml
apiVersion: v1
kind: Service
metadata:
  name: uni-verse-frontend-service
spec:
  selector:
    app: uni-verse-frontend
  ports:
  - port: 3334
    targetPort: 3000
